# fastapi-microservice-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  README.md  pyproject.toml  run.py  setup.sh
{{cookiecutter.project_name}}/app/: main.py
{{cookiecutter.project_name}}/app/api/api_v1/: api.py
{{cookiecutter.project_name}}/app/api/api_v1/routers/: {{cookiecutter.ms_name}}.py
{{cookiecutter.project_name}}/app/core/: config.py
